# mlp.cpp

./: .clangd  .gitignore  CMakeLists.txt  README.md  cross-entropy.md  dump.cpp  inference.cpp  inspect.cpp  mlp.cpp  mlp.h  sdg.md  train.cpp  xor.c  xor.cpp
algorithms/: adam.md  adamw.md  cross-entropy.md  mse.md
include/: ckpt.h  mlp.h  mnist_data.h  path.h  stb_image.h  xorshift.h
mnist/: CMakeLists.txt  mnist_data.cpp  mnist_data.h  mnist_eval.cpp  mnist_train.cpp
src/: ckpt.cpp  mlp.cpp  mnist_data.cpp  path.c  path.cpp  xorshift.c  xorshift.cpp
xor/: CMakeLists.txt  inference.cpp  inspect.cpp  train.cpp  xor_inference.cpp  xor_inspect.cpp  xor_shift.cpp  xor_train.cpp
